--- a/.github/workflows/trigger_search.yml
+++ b/.github/workflows/trigger_search.yml
@@ -1,5 +1,4 @@
-# This is a basic workflow that is manually triggered
-
+# Manually triggered workflow
 name: Trigger Recipe Search
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
@@ -8,8 +7,7 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      recipe:
-        # Friendly description to be shown in the UI instead of 'name'
+      input_recipe:
         description: 'Recipe to find:'
         # Default value if no value is explicitly provided
         default: 'pizza'
@@ -22,12 +20,14 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: Find recipe from foodie.fi
-          uses: joonvena/robotframework-docker-action@v0.1
-          env:
-            BROWSER: firefox
-            ROBOT_TESTS_DIR: ${{ github.workspace }}/tasks
-            ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
-            ROBOT_OPTIONS: "--variable RECIPE_TO_SEARCH:${{ github.event.inputs.recipe }}"
+          run: docker run \
+          -v ${PWD}/reports:/opt/robotframework/reports:Z \
+          -v ${PWD}/tasks:/opt/robotframework/tests:Z \
+          -v ${PWD}/reports/file://opt/robotframework/temp/reports/file/ \
+          -e ROBOT_OPTIONS="--variable RECIPE_TO_SEARCH:${{ github.event.inputs.recipe }}" \
+          ppodgorsek/robot-framework:latest
+        - name: print results
+          run: ls # todo: print file where number is 
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
