fix printing results syntax

--- a/.github/workflows/trigger_search.yml
+++ b/.github/workflows/trigger_search.yml
@@ -29,8 +29,9 @@ jobs:
               --user $(id -u):$(id -g) \
               ppodgorsek/robot-framework:latest
         - name: print results
-          run: echo "Number of recipes" 
-          run: cat reports/file/recipe_numbers.log
+          run: |
+            echo "Number of recipes" 
+            cat reports/file/recipe_numbers.log
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
