run workflow when push master and for for pull requests

--- a/.github/workflows/trigger_search.yml
+++ b/.github/workflows/trigger_search.yml
@@ -4,6 +4,10 @@ name: Trigger Recipe Search
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  push:
+    branches:
+      - master
+  pull_request:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
