--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -24,7 +24,7 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: Find recipe from foodie.fi
-          uses: actions/run_robot_framework@v1
+          uses: ./.github/actions/run_robot_framework
           env:
             ROBOT_TESTS_DIR: ${{ github.workspace }}/tasks
             ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
