--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -1,5 +1,5 @@
 # Manually triggered workflow
-name: Trigger Recipe Search
+name: Trigger Recipe Search Using Action
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -24,7 +24,7 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: Find recipe from foodie.fi
-          uses: ./.github/actions/run_robot_framework
+          uses: .github/actions/run_robot_framework
           env:
             ROBOT_TESTS_DIR: ${{ github.workspace }}/tasks
             ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
