--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -24,7 +24,7 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: Find recipe from foodie.fi
-          uses: /.github/actions/run-robot-framework@use_own_action
+          uses: laojala/rpa_challenge/.github/actions/run-robot-framework@use_own_action
           env:
             ROBOT_TESTS_DIR: ${{ github.workspace }}/tasks
             ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
