--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -28,7 +28,7 @@ jobs:
           env:
             ROBOT_TESTS_DIR: ${{ github.workspace }}/tasks
             ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
-            ROBOT_OPTIONS: --variable RECIPE_TO_SEARCH:${{ github.event.inputs.recipe }}"
+            ROBOT_OPTIONS: --variable RECIPE_TO_SEARCH:${{ github.event.inputs.recipe }}
         - name: print results
           run: |
             echo "Number of recipes" 
