try to modify rights

--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -29,6 +29,8 @@ jobs:
             ROBOT_TESTS_DIR: ${{ github.workspace }}/tasks
             ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
             ROBOT_OPTIONS: --variable RECIPE_TO_SEARCH:${{ github.event.inputs.recipe }}
+            ROBOT_UID: -u
+            ROBOT_GID: -g
         - name: print results
           run: |
             echo "Number of recipes" 
