--- a/.github/workflows/reply_issue.yml
+++ b/.github/workflows/reply_issue.yml
@@ -26,7 +26,7 @@ jobs:
             echo "Number of recipes" 
             cat reports/file/recipe_numbers.log
         - name: print variable
-          run: echo ${{ steps.recipes.outputs.log }}
+          run: echo This is the variable ${{ steps.recipes.outputs.log }}
         - name: Autoclose issue
           uses: arkon/issue-closer-action@v1.1
           with:
