--- a/.github/workflows/reply_issue.yml
+++ b/.github/workflows/reply_issue.yml
@@ -21,19 +21,21 @@ jobs:
         - name: Set results as variable
           id: recipes
           run: echo "::set-output name=log::$(cat reports/file/recipe_numbers.log)"
+          env:
+            RESULT: ${{ steps.recipes.outputs.log }}
         - name: print results
           run: |
             echo "Number of recipes" 
             cat reports/file/recipe_numbers.log
         - name: print variable
-          run: echo This is the variable ${{ steps.recipes.outputs.log }}
+          run: echo This is the variable $RESULT
         - name: Autoclose issue
           uses: arkon/issue-closer-action@v1.1
           with:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
             type: "title"
             regex: ".*"
-            message: "@${issue.user.login} - ${{ steps.recipes.outputs.log }}"
+            message: "@${issue.user.login} - $RESULT"
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
