run cat inside string

--- a/.github/workflows/reply_issue.yml
+++ b/.github/workflows/reply_issue.yml
@@ -20,13 +20,12 @@ jobs:
               ppodgorsek/robot-framework:latest
         - name: Autoclose issue
           id: recipes
-          run: echo "::set-output name=log::$(cat reports/file/recipe_numbers.log)"
           uses: arkon/issue-closer-action@v1.1
           with:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
             type: "title"
             regex: ".*"
-            message: "@${issue.user.login} - ${{ steps.recipes.outputs.log }}"
+            message: "@${issue.user.login} - ${{ cat reports/file/recipe_numbers.log }}"
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
