fix set variable status

--- a/.github/workflows/reply_issue.yml
+++ b/.github/workflows/reply_issue.yml
@@ -20,9 +20,7 @@ jobs:
               ppodgorsek/robot-framework:latest
         - name: Set results as variable
           id: recipes
-          run: echo "::set-output name=log::$(cat reports/file/recipe_numbers.log)"
-          env:
-            RESULT: ${{steps.recipes.outputs.log}}
+          run: echo "::set-env name=RESULT::$(cat reports/file/recipe_numbers.log)"
         - name: print results
           run: |
             echo "Number of recipes" 
@@ -35,7 +33,7 @@ jobs:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
             type: "title"
             regex: ".*"
-            message: "@${issue.user.login} - ${RESULT}"
+            message: "@${issue.user.login} - $RESULT"
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
