--- a/.github/workflows/reply_issue.yml
+++ b/.github/workflows/reply_issue.yml
@@ -33,7 +33,7 @@ jobs:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
             type: "title"
             regex: ".*"
-            message: "@${issue.user.login} - ${env.RESULT}"
+            message: ${env.RESULT}
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
