--- a/.github/workflows/reply_issue.yml
+++ b/.github/workflows/reply_issue.yml
@@ -21,8 +21,8 @@ jobs:
         - name: Set results as variable
           id: recipes
           run: | 
-            echo "::set-output name=RESULT::$(cat reports/file/recipe_numbers.log)"
-            echo this is the variable: ${{ steps.recipes.outputs.log }}
+            echo "::set-output name=result::$(cat reports/file/recipe_numbers.log)"
+            echo this is the variable: ${{ steps.recipes.outputs.result }}
         - name: print results
           run: |
             echo "Number of recipes" 
@@ -35,7 +35,7 @@ jobs:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
             type: "title"
             regex: ".*"
-            message: "${{ steps.recipes.outputs.log }}"
+            message: "${{ steps.recipes.outputs.result }}"
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
