notify user who opened issue

--- a/.github/workflows/reply_issue.yml
+++ b/.github/workflows/reply_issue.yml
@@ -28,15 +28,13 @@ jobs:
           run: |
             echo "Number of recipes" 
             cat reports/file/recipe_numbers.log
-        - name: print variable
-          run: echo ${{env.RESULT}}
         - name: Autoclose issue
           uses: arkon/issue-closer-action@v1.1
           with:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
             type: "title"
             regex: ".*"
-            message: ${{ env.RECIPES }}
+            message: "@${issue.user.login} - ${{ env.RECIPES }}"
         - name: Upload run results
           uses: actions/upload-artifact@v1
           if: always()
